# django-social-cn

./: .gitignore  MANIFEST.in  README.md  setup.cfg
django_social.egg-info/: PKG-INFO  SOURCES.txt
django_social_cn.egg-info/: PKG-INFO  SOURCES.txt
social/: README.md  __init__.py  admin.py  apis.py  apps.py  models.py  receivers.py  serializers.py  signals.py  tests.py  urls.py  views.py
social/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
social/templates/social/: success.html
