[metadata]
name = django-social-cn
version = 0.1.1
description = A Django app to integration social accounts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChanMo/django-social
author = ChanMo
author_email = chan.mo@outlook.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
[options]
include_package_data = true
packages = find:
